[package]
name = "ianaio-bearer"
version = "0.1.0"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
readme = "README.md"
keywords = ["IANA SYSTEMS", "OAuth2, bearer, authentification, cli"]
categories = ["authentication", "command-line-interface"]
description = """Command line utility to generate HTTP Authorization header
 with bearer tokens. This is achieved with OAuth2 authorization code and
 refresh token workflow."""
license = "MIT"
documentation = "https://docs.rs/crate/bearer, https://docs.iana.io/bearer"
#homepage = "https://github.com/ianaio/ianaio-bearer"
repository = "https://github.com/ianaio/ianaio-bearer"

[dependencies]

libc = "0.2.144"
clap = "4.2.7"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tilde-expand = "0.1.1"
chrono = "0.4.24"

toml = "0.7.3"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"

url = "2.3.1"
cabot = "0.7.1"

[dev-dependencies]
rand = "0.8.5"

